Accept ±inf and NaN as float and double values

Also fix the broken error message when a float value is out of range.
PyErr_Format() does not support float macros.

https://bugzilla.gnome.org/show_bug.cgi?id=692381